# portfolio-projects

./: README.md  varava_food(2).backup  varava_food_corrected_v7_final_empty_backup (1).sql
Xbook/: CmakeLists.txt  Xbookstore.vcxproj  Xbookstore.vcxproj.filters
Xbook/include/: book.h  bookstore.h
Xbook/src/: CmakeLists.txt  book.cpp  bookstore.cpp  main.cpp
Xbook/tests/: CMakeLists.txt  test_bookstore.cpp
checkers2-main/: checkers.py  test_checkers.py
